...
                    }
                ),
                in: range,
                step: step
            ) {
                Text("Max Character Count: \(maxChars)")
            }.padding().accessibilityIdentifier("MaxCountStepper")
        }
    }
}

struct SettingsView_Previews: PreviewProvider {
    @State static var colour = Color.yellow
...
